added navbar to index page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 
 <head>
+    <nav>
+        <a href="index.html"><div>Home</div></a>
+        <a href="about.html"><div>About</div></a>
+        <a href="contact.html"><div>Contact</div></a>
+       </nav>
     <title>Welcome to Thunderdome</title>
 
     <style type="text/css">
