fixed canvas greeting, added css to about

--- a/about.html
+++ b/about.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
+    <title>About</title>
+    <link rel="stylesheet" type='text/css' href="index.css">
 </head>
 <body>
     <h1>
@@ -10,7 +11,6 @@
     <p>
         Thunderdome Warrior is a rock-paper-scissors arena game. Choose the right tool for each fight,
         and you might win. Successive wins will net you more money to spend on better gear, and earn you a better title.
-
     </p>
 </body>
 </html>
