forked thunderdome into lumberdome and made into a new project

--- a/about.html
+++ b/about.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
+    <title>About</title>
+    <link rel="stylesheet" type='text/css' href="index.css">
 </head>
 <body>
+    <nav>
+        <div class='navbar' >
+        <a href="index.html"><div>Home</div></a>
+        <a href="about.html"><div>About</div></a>
+        <a href="contact.html"><div>Contact and Credits</div></a>
+        </div>
+    </nav>
+
+    <div class='h1bar'>
     <h1>
-       About Thunderdome Warrior
+       About Lumberdome
     </h1>
     <p>
-        Thunderdome Warrior is a rock-paper-scissors arena game. Choose the right tool for each fight,
-        and you might win. Successive wins will net you more money to spend on better gear, and earn you a better title.
-
+        Lumberdome is about survival. Given a ticking clock of starvation, an axe, 
+        and the meagre resources in the wilderness around you, survive as many days as you can!
+        Sticks can be used to craft hunting gear, a cot, kindling, and more. Logs can be used to craft shelters like a lean-to,
+        or campfire. 
+        Manage your resources wisely, and you can stave of starvation long enough to be rescued!
     </p>
+    </div>
 </body>
 </html>
