created main class and some helpers

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 
 <body>
-    
         <nav>
             <div class='navbar' >
             <a href="index.html"><div>Home</div></a>
@@ -19,13 +18,12 @@
     <div class='h1bar'>
     <h1>Welcome to Lumberdome!</h1>
     <p>It is just you and your axe. Use it to harvest trees for sticks and logs. 
-        Use the wood to survive. How many days can you survive?
+        Use the wood to survive as many days as you can!
     </p>
-
-</div>
+    </div>
     <div class='welcomeCanvas'>
     <canvas>
-        <script src="main/canvas.js"></script>
+        <script src='main/canvas.js'></script>
     </canvas>
     </div>      
 
