--- a/about.html
+++ b/about.html
@@ -21,9 +21,7 @@
         Lumberdome is about survival. Given a ticking clock of starvation, an axe, 
         and the meagre resources in the wilderness around you, survive as many days as you can!
         Sticks can be used to craft hunting gear, a cot, kindling, and more. Logs can be used to craft shelters like a lean-to,
-        or campfire. 
-        Manage your resources wisely, and you can stave of starvation long enough to be rescued!
-
+        or campfire. Manage your resources wisely, and you can stave of starvation long enough to be rescued!
     </p>
     </div>
 </body>
