--- a/about.html
+++ b/about.html
@@ -2,18 +2,20 @@
 <html>
 <head>
     <title>About</title>
-    <link rel="stylesheet" type='text/css' href="index.css">
+    <link rel='stylesheet' type='text/css' href='index.css'>
 </head>
 <body>
+    <div class='banner'>
     <nav>
         <div class='navbar' >
-        <a href="index.html"><div>Home</div></a>
-        <a href="about.html"><div>About</div></a>
-        <a href="contact.html"><div>Contact and Credits</div></a>
+        <a href='index.html'><div>Home</div></a>
+        <a href='about.html'><div>About</div></a>
+        <a href='contact.html'><div>Contact and Credits</div></a>
         </div>
     </nav>
+    </div>
 
-    <div class='h1bar'>
+    <div class='pageTop'>
     <h1>
        About Lumberdome
     </h1>
