--- a/index.html
+++ b/index.html
@@ -3,23 +3,28 @@
 
 <head>        
     <title>Welcome to Lumberdome</title>
-    <link rel="stylesheet" type='text/css' href="index.css">
+    <link rel='stylesheet' type='text/css' href='index.css'>
 </head>
 
 <body>
-        <nav>
-            <div class='navbar' >
-            <a href="index.html"><div>Home</div></a>
-            <a href="about.html"><div>About</div></a>
-            <a href="contact.html"><div>Contact and Credits</div></a>
-            </div>
-        </nav>
-
-    <div class='h1bar'>
-    <h1>Welcome to Lumberdome!</h1>
-    <p>It is just you and your axe. Use it to harvest trees for sticks and logs. 
-        Use the wood to survive as many days as you can!
-    </p>
+        <div class='banner'> 
+            <nav>
+                <div class='navbar' >
+                <a href='index.html'><div>Home</div></a>
+                <a href='about.html'><div>About</div></a>
+                <a href='contact.html'><div>Contact and Credits</div></a>
+                </div>
+            </nav>
+            
+        </div>
+    <div class='pageTop'>
+        <div class='logo'></div>
+        <div class='h1bar'>
+            <h1>Welcome to Lumberdome!</h1>
+            <p>It is just you and your axe. Use it to harvest trees for sticks and logs. 
+            Use the wood to survive as many days as you can!
+            </p>
+        </div>
     </div>
     <div class='welcomeCanvas'>
     <canvas>
