nothing major to report

--- a/contact.html
+++ b/contact.html
@@ -2,17 +2,18 @@
 <html>
     <head>
         <title>Contact</title>
-        <link rel="stylesheet" type='text/css' href="index.css">
-        <nav>
-            <div class='navbar' >
-            <a href="index.html"><div>Home</div></a>
-            <a href="about.html"><div>About</div></a>
-            <a href="contact.html"><div>Contact and Credits</div></a>
-            </div>
-        </nav>
+        <link rel='stylesheet' type='text/css' href='index.css'>
+        
     </head>
     <body>
-        <div>
+        <div class='pageTop'>
+            <nav>
+                <div class='navbar' >
+                <a href='index.html'><div>Home</div></a>
+                <a href='about.html'><div>About</div></a>
+                <a href='contact.html'><div>Contact and Credits</div></a>
+                </div>
+            </nav>
         <p>
             If this game blew your mind, you can reach me at *personal info omitted*
              to discuss hiring me for your organization.
