flattened structure, worked on animating canvas

--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,10 @@
             If this game blew your mind, you can reach me at *personal info omitted*
              to discuss hiring me for your organization.
         </p>
+        <p>
+            Music: "Retro Forest" composed by David Fesliyan, courtesy of 
+            <a href='https://www.fesliyanstudios.com/royalty-free-music/download/retro-forest/451'>www.fesliyanstudios.com.</a>
+        </p>
         </div>
     </body>
     <footer>
