have a working timer, but animate is broken
But I desperately need to clean up the scratch in my scripts and reorganize the data

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
     
 <head>        
     <title>Welcome to Lumberdome</title>
-    <link rel='stylesheet' type='text/css' href='index.css'>
-    <audio src='data/sounds/slowforest.mp3' id='music'></audio>
+    <link rel='stylesheet' type='text/css' href='./index.css'>
+    <audio src='./data/sounds/slowforest.mp3' id='music'></audio>
 </head>
 
 <body>
     <div class='Lumberdome'>
         <canvas>
-            <script src='main/canvas.js'></script>
+            <script type='module' src='./main/canvas.js'></script>
         </canvas>
         </div>    
     <div class='pageTop'>
         <div class='logo'>
-            <img src='data/LumberdomeLogo.png' class='center'>
+            <img src='./data/LumberdomeLogo.png' class='center'>
         </div>
         <div class='h1bar'>
             <h1>Welcome to Lumberdome!</h1> 
@@ -30,9 +30,9 @@
       
     <nav>
         <div class='navbar' >
-        <a href='index.html'><div>Home</div></a>
-        <a href='about.html'><div>About</div></a>
-        <a href='contact.html'><div>Contact and Credits</div></a>
+        <a href='./index.html'><div>Home</div></a>
+        <a href='./about.html'><div>About</div></a>
+        <a href='./contact.html'><div>Contact and Credits</div></a>
         </div>
     </nav>
 </body>
