got animation working alongside timer
healthbar shrinks with time. still need to clean up stuff. next is adding to inventory

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class='Lumberdome'>
         <canvas>
-            <script type='module' src='./main/canvas.js'></script>
+            <script type='module' src='./main/main.js'></script>
         </canvas>
         </div>    
     <div class='pageTop'>
