moved all html from index except script

--- a/about.html
+++ b/about.html
@@ -26,5 +26,27 @@
         or campfire. Manage your resources wisely, and you can stave of starvation long enough to be rescued!
     </p>
     </div>
+    <div class='pageTop'>
+        <div class='logo'>
+            <img src='./data/LumberdomeLogo.png' class='center'>
+        </div>
+        <div class='h1bar'>
+            <h1>Welcome to Lumberdome!</h1> 
+            <p>It is just you and your axe. Use it to harvest trees for sticks and logs. 
+            Use the wood to survive as many days as you can!
+            </p>
+            <div class='startButton' >
+                <button>Start</button>
+            </div>
+        </div>
+    </div>
+      
+    <nav>
+        <div class='navbar' >
+        <a href='./index.html'><div>Home</div></a>
+        <a href='./about.html'><div>About</div></a>
+        <a href='./contact.html'><div>Contact and Credits</div></a>
+        </div>
+    </nav>
 </body>
 </html>
