getting ready to refactor
removed some unused assets, organized some html. next step is to install a linter.

--- a/about.html
+++ b/about.html
@@ -6,47 +6,23 @@
 </head>
 <body>
     <div class='banner'>
-    <nav>
-        <div class='navbar' >
-        <a href='index.html'><div>Home</div></a>
-        <a href='about.html'><div>About</div></a>
-        <a href='contact.html'><div>Contact and Credits</div></a>
-        </div>
-    </nav>
-    </div>
-
-    <div class='pageTop'>
-    <h1>
-       About Lumberdome
-    </h1>
-    <p>
-        Lumberdome is about survival. Given a ticking clock of starvation, an axe, 
-        and the meagre resources in the wilderness around you, survive as many days as you can!
-        Sticks can be used to craft hunting gear, a cot, kindling, and more. Logs can be used to craft shelters like a lean-to,
-        or campfire. Manage your resources wisely, and you can stave of starvation long enough to be rescued!
-    </p>
-    </div>
-    <div class='pageTop'>
-        <div class='logo'>
-            <img src='./data/LumberdomeLogo.png' class='center'>
-        </div>
-        <div class='h1bar'>
-            <h1>Welcome to Lumberdome!</h1> 
-            <p>It is just you and your axe. Use it to harvest trees for sticks and logs. 
-            Use the wood to survive as many days as you can!
-            </p>
-            <div class='startButton' >
-                <button>Start</button>
+        <nav>
+            <div class='navbar' >
+            <a href='index.html'><div>Home</div></a>
+            <a href='about.html'><div>About</div></a>
+            <a href='contact.html'><div>Contact and Credits</div></a>
             </div>
+        </nav>
         </div>
+
+        <div class='pageTop'>
+        <h1>About Lumberdome</h1>
+        <p>
+            Lumberdome is about survival. Given a ticking clock of starvation, an axe, 
+            and the meagre resources in the wilderness around you, survive as many days as you can!
+            Sticks can be used to craft hunting gear. Logs can be used to craft a shelter.
+            Manage your resources wisely, and you can stave of starvation long enough to be rescued!
+        </p>
     </div>
-      
-    <nav>
-        <div class='navbar' >
-        <a href='./index.html'><div>Home</div></a>
-        <a href='./about.html'><div>About</div></a>
-        <a href='./contact.html'><div>Contact and Credits</div></a>
-        </div>
-    </nav>
 </body>
 </html>
