--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     
 <head>        
     <title>Welcome to Lumberdome</title>
+    <meta property='og:image' href='./data/bgs/forest.jpg' />
     <link rel='stylesheet' type='text/css' href='./index.css'>
     <audio src='./data/sounds/slowforest.mp3' id='music'></audio>
 </head>
