--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>        
     <title>Welcome to Lumberdome</title>
     <meta property='og:image' content='./data/bgs/splash.png' />
+    <meta property='og:description' content='Simple game in vanilla JS' />
     <link rel='stylesheet' type='text/css' href='./index.css'>
     <audio src='./data/sounds/slowforest.mp3' id='music'></audio>
 </head>
